--- a/tips.html
+++ b/tips.html
@@ -373,8 +373,8 @@
     // Add/remove as needed. Links can point to your own pages later.
     const guidesData = [
       {
-        title: "Starter Route — Fast Meds & Ammo",
-        desc: "A simple early-game loop you can repeat safely until you’re stocked.",
+        title: "Beggining of the End",
+        desc: "Look inside of the zombies, containers and loot up. Guns will be your best friends but, careful ammo is not cheap.",
         tags: ["Basics", "Loot"],
         links: [
           { label: "Open", url: "wiki.html" }
