--- a/wiki.html
+++ b/wiki.html
@@ -290,7 +290,7 @@
           <div class="acc-body">
             These mirror the official wiki navigation.
             <div class="chiprow">
-              <a class="chip" href="https://deadpoly.wiki/Helmets" target="_blank" rel="noopener">Helmets ↗</a>
+              <a class="chip" href="https://github.com/Guthanger-123/Deadpoly-Community-Hub/blob/8a743ddee6b74b1a952f44e14809f8c35a31fd5b/helmets.html" target="_blank" rel="noopener">Helmets ↗</a>
               <a class="chip" href="https://deadpoly.wiki/Masks" target="_blank" rel="noopener">Masks ↗</a>
               <a class="chip" href="https://deadpoly.wiki/Weapons" target="_blank" rel="noopener">Weapons ↗</a>
               <a class="chip" href="https://deadpoly.wiki/Armor" target="_blank" rel="noopener">Armor ↗</a>
