--- a/ammo.html
+++ b/ammo.html
@@ -1,100 +1,104 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DeadPoly Community Hub — Ammo</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>DeadPoly — Ammo</title>
   <style>
-    :root{--bg:#0b0b0f;--panel:#14141b;--panel2:#101016;--text:#f2f2f2;--muted:#b7b7c2;--line:#2a2a36;--btn:#1c1c26;--btnHover:#242434;}
+    :root{--bg:#0b0b0f;--panel:#12121a;--panel2:#0f0f16;--line:#2a2a36;--text:#f2f2f2;--muted:#b7b7c2;--btn:#1c1c26;--btnHover:#262638;}
     html,body{height:100%;margin:0;background:var(--bg);color:var(--text);font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;}
-    a{color:inherit}
+    a{color:inherit;text-decoration:none}
     .topbar{position:sticky;top:0;z-index:999;background:linear-gradient(to bottom, rgba(10,10,14,.92), rgba(10,10,14,.7));backdrop-filter: blur(6px);border-bottom:1px solid var(--line);}
     .topbar-inner{max-width:1100px;margin:0 auto;padding:10px 14px;display:flex;gap:10px;align-items:center;justify-content:space-between;}
-    .btn{display:inline-flex;align-items:center;gap:8px;background:var(--btn);border:1px solid var(--line);color:var(--text);padding:8px 10px;border-radius:10px;text-decoration:none;transition:transform .08s ease, background .12s ease;user-select:none;}
+    .btn{display:inline-flex;align-items:center;gap:8px;background:var(--btn);border:1px solid var(--line);padding:8px 10px;border-radius:10px;transition:background .12s ease, transform .08s ease;}
     .btn:hover{background:var(--btnHover)} .btn:active{transform:scale(.98)}
     .wrap{max-width:1100px;margin:0 auto;padding:18px 14px 40px}
     h1{margin:0;font-size:26px;letter-spacing:.3px}
     .sub{margin:6px 0 0;color:var(--muted)}
-    .section{margin-top:16px;background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));border:1px solid var(--line);border-radius:16px;padding:12px;}
-    .section h2{margin:0 0 8px;font-size:16px}
-    table{width:100%;border-collapse:separate;border-spacing:0 10px}
-    th{color:var(--muted);font-weight:600;text-align:left;padding:0 10px}
-    td{background:rgba(255,255,255,.02);border:1px solid var(--line);padding:10px;vertical-align:middle;}
-    tr td:first-child{border-radius:12px 0 0 12px} tr td:last-child{border-radius:0 12px 12px 0}
-    .thumb{width:56px;height:56px;object-fit:contain;background:rgba(0,0,0,.25);border:1px solid rgba(255,255,255,.08);border-radius:12px;display:block;}
-    .name{font-weight:700}
-    .note{color:var(--muted)}
+    .card{margin-top:14px;background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));border:1px solid var(--line);border-radius:16px;padding:14px;}
+    table{width:100%;border-collapse:separate;border-spacing:0;margin-top:8px;overflow:hidden;border-radius:14px;border:1px solid var(--line)}
+    thead th{background:rgba(255,255,255,.03);text-align:left;font-size:12px;color:var(--muted);padding:10px;border-bottom:1px solid var(--line)}
+    tbody td{padding:10px;border-bottom:1px solid rgba(255,255,255,.06);vertical-align:middle}
+    tbody tr:hover{background:rgba(255,255,255,.03)}
+    .thumb{width:52px;height:52px;object-fit:contain;background:rgba(0,0,0,.25);border:1px solid rgba(255,255,255,.08);border-radius:10px}
+    .muted{color:var(--muted)}
+    .pill{display:inline-block;margin-top:10px;padding:6px 10px;border-radius:999px;border:1px solid var(--line);background:var(--panel2);color:var(--muted);font-size:12px}
   </style>
 </head>
 <body>
   <div class="topbar">
     <div class="topbar-inner">
-      <a class="btn" href="wiki.html">← Wiki Hub</a>
+      <a class="btn" href="wiki.html">← Wiki</a>
       <div class="sub" style="margin:0">Ammo</div>
-      <a class="btn" href="https://deadpoly.wiki/Main_Page" target="_blank" rel="noopener">Official Wiki ↗</a>
+      <a class="btn" href="https://deadpoly.wiki/Ammo" target="_blank" rel="noopener">Official Page ↗</a>
     </div>
   </div>
 
   <div class="wrap">
-    <h1>Ammo Types</h1>
-    <div class="sub">Remember that a Bullet Press is required to craft Ammunition.</div>
-
-    <div class="section">
-      <h2>Ammo Types</h2>
-      <div id="ammo"></div>
+    <div>
+      <h1>Ammo Types</h1>
+      <div class="sub">Remember: Bullet Press is required to craft ammunition.</div>
+      <span class="pill">Local table + official images</span>
     </div>
 
-    <div class="section">
-      <h2>Unavailable</h2>
-      <div id="unavail"></div>
-    </div>
-
-    <div class="section">
-      <h2>Other</h2>
-      <div class="note"><b>Nails</b> are used as ammunition in the Nail Gun but are more commonly used for crafting.</div>
-    </div>
+    <div class="card" id="content"></div>
   </div>
 
 <script>
-  function fileUrl(filename){
-    const a = "https://deadpoly.wiki/index.php?title=Special:FilePath/" + encodeURIComponent(filename);
-    const b = "https://deadpoly.wiki/wiki/Special:FilePath/" + encodeURIComponent(filename);
-    return { a, b };
-  }
-
-  const ammo = [
-    { img:"TM_556x45_E.png", type:"5.56x45mm", req:"2x Refined Metal, 2x Gunpowder" },
-    { img:"TM_762x39_E.png", type:"7.62x39mm", req:"2x Refined Metal, 2x Gunpowder" },
-    { img:"TM_9mm_E.png", type:"9mm", req:"1x Refined Metal, 1x Gunpowder" },
-    { img:"TM_12ga_E.png", type:"12Ga", req:"1x Refined Metal, 4x Gunpowder, 4x Plastic" },
-  ];
-  const unavail = [
-    { img:"TM_22lr_E.png", type:".22 LR", req:"??" },
-    { img:"TM_45acp_E.png", type:".45 ACP", req:"??" },
-    { img:"TM_50bmg_E.png", type:".50 BMG", req:"??" },
+  const ammoAvailable = [
+    {file:"TM_556x45_E.png", type:"5.56x45mm", req:"2x Refined Metal, 2x Gunpowder"},
+    {file:"TM_762x39_E.png", type:"7.62x39mm", req:"2x Refined Metal, 2x Gunpowder"},
+    {file:"TM_9mm_E.png", type:"9mm", req:"1x Refined Metal, 1x Gunpowder"},
+    {file:"TM_12ga_E.png", type:"12Ga", req:"1x Refined Metal, 4x Gunpowder, 4x Plastic"},
   ];
 
-  function table(rows){
-    return `
-      <table>
-        <thead><tr><th>Image</th><th>Ammo Type</th><th>Crafting Requirements</th></tr></thead>
-        <tbody>
-          ${rows.map(r=>{
-            const {a,b}=fileUrl(r.img);
-            return `
-              <tr>
-                <td style="width:76px"><img class="thumb" src="${a}" onerror="this.onerror=null;this.src='${b}'" alt="${r.img}"></td>
-                <td><div class="name">${esc(r.type)}</div></td>
-                <td class="note">${esc(r.req)}</td>
-              </tr>`;
-          }).join("")}
-        </tbody>
-      </table>`;
+  const ammoUnavailable = [
+    {file:"TM_22lr_E.png", type:".22 LR", req:"??"},
+    {file:"TM_45acp_E.png", type:".45 ACP", req:"??"},
+    {file:"TM_50bmg_E.png", type:".50 BMG", req:"??"},
+  ];
+
+  function filePathUrl(filename){
+    return "https://deadpoly.wiki/Special:FilePath/" + encodeURIComponent(filename);
+  }
+  function escapeHtml(s){
+    return String(s).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
   }
 
-  function esc(s){return String(s).replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));}
-  document.getElementById("ammo").innerHTML = table(ammo);
-  document.getElementById("unavail").innerHTML = table(unavail);
+  const el = document.getElementById("content");
+  el.innerHTML = `
+    <h3 style="margin:0 0 8px">Available</h3>
+    <table>
+      <thead><tr><th style="width:72px">Icon</th><th>Ammo Type</th><th>Crafting Requirements</th></tr></thead>
+      <tbody>
+        ${ammoAvailable.map(a => `
+          <tr>
+            <td><img class="thumb" src="${filePathUrl(a.file)}" alt="${escapeHtml(a.type)}"></td>
+            <td style="font-weight:700">${escapeHtml(a.type)}</td>
+            <td class="muted">${escapeHtml(a.req)}</td>
+          </tr>
+        `).join("")}
+      </tbody>
+    </table>
+
+    <h3 style="margin:18px 0 8px">Unavailable</h3>
+    <table>
+      <thead><tr><th style="width:72px">Icon</th><th>Ammo Type</th><th>Crafting Requirements</th></tr></thead>
+      <tbody>
+        ${ammoUnavailable.map(a => `
+          <tr>
+            <td><img class="thumb" src="${filePathUrl(a.file)}" alt="${escapeHtml(a.type)}"></td>
+            <td style="font-weight:700">${escapeHtml(a.type)}</td>
+            <td class="muted">${escapeHtml(a.req)}</td>
+          </tr>
+        `).join("")}
+      </tbody>
+    </table>
+
+    <div class="muted" style="margin-top:14px">
+      <b>Other:</b> Nails are used as ammunition in the Nail Gun, but are more commonly used for crafting.
+    </div>
+  `;
 </script>
 </body>
 </html>
